--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "insurance-api",
-    "version": "1.0.8",
+    "name": "express-ts-starter",
+    "version": "1.5.0",
     "private": true,
     "scripts": {
         "test": "mocha --timeout 5000 -r ts-node/register tests/**/*.ts ",
@@ -19,75 +19,75 @@
         "build-test": "rm -rf ./test && tsc -w -p tests"
     },
     "dependencies": {
-        "@sendgrid/mail": "^6.5.5",
-        "@types/async": "^3.2.0",
+        "@sendgrid/mail": "^8.1.3",
+        "@types/async": "^3.2.24",
         "@types/card-validator": "^4.1.0",
-        "@types/glob": "^7.1.1",
-        "@types/ip": "^1.1.0",
-        "@types/jsonwebtoken": "^8.3.7",
-        "@types/morgan": "^1.7.37",
-        "@types/multer": "^1.4.2",
-        "@types/node-rsa": "^1.0.0",
-        "@types/qrcode": "^1.3.4",
-        "@types/redis": "^2.8.16",
-        "@types/request-promise": "^4.1.46",
-        "@types/sharp": "^0.24.0",
-        "@types/speakeasy": "^2.0.5",
-        "async": "^3.2.0",
-        "bignumber.js": "^9.0.0",
-        "body-parser": "^1.13.3",
-        "card-validator": "^6.2.0",
+        "@types/glob": "^8.1.0",
+        "@types/ip": "^1.1.3",
+        "@types/jsonwebtoken": "^9.0.6",
+        "@types/morgan": "^1.9.9",
+        "@types/multer": "^1.4.11",
+        "@types/node-rsa": "^1.1.4",
+        "@types/qrcode": "^1.5.5",
+        "@types/redis": "^4.0.10",
+        "@types/request-promise": "^4.1.51",
+        "@types/sharp": "^0.31.1",
+        "@types/speakeasy": "^2.0.10",
+        "async": "^3.2.5",
+        "bignumber.js": "^9.1.2",
+        "body-parser": "^1.20.2",
+        "card-validator": "^9.1.0",
         "cloudflare-express": "^1.0.1",
-        "cookie-parser": "~1.3.5",
+        "cookie-parser": "~1.4.6",
         "cors": "^2.8.5",
-        "cross-env": "^5.1.5",
-        "debug": "^4.0.1",
-        "express": "^4.13.4",
-        "express-validator": "^6.4.0",
+        "cross-env": "^7.0.3",
+        "debug": "^4.3.5",
+        "express": "^4.19.2",
+        "express-validator": "^7.1.0",
         "fresh": "^0.5.2",
-        "glob": "^5.0.14",
-        "helmet": "^3.22.0",
+        "glob": "^10.4.1",
+        "helmet": "^7.1.0",
         "if-mailers": "git+https://0428bbecca18daf6c378c70667d1fa813723fc87:x-oauth-basic@github.com/manishsingh10895/if-mailers.git",
-        "ip": "^1.1.5",
-        "jsonwebtoken": "^8.5.1",
-        "lodash": "^4.17.15",
-        "moment": "^2.24.0",
-        "mongoose": "^5.7.5",
-        "morgan": "^1.6.1",
+        "ip": "^2.0.1",
+        "jsonwebtoken": "^9.0.2",
+        "lodash": "^4.17.21",
+        "moment": "^2.30.1",
+        "mongoose": "^8.4.3",
+        "morgan": "^1.10.0",
         "multer": "^1.4.2",
-        "negotiator": "^0.6.1",
-        "node-rsa": "^1.0.8",
-        "qrcode": "^1.4.4",
-        "redis": "^3.0.2",
+        "negotiator": "^0.6.3",
+        "node-rsa": "^1.1.1",
+        "qrcode": "^1.5.3",
+        "redis": "^4.6.14",
         "request-promise": "^4.2.5",
         "serve-favicon": "^2.5.0",
-        "sharp": "^0.25.1",
-        "socket.io": "^2.2.0",
+        "sharp": "^0.33.4",
+        "socket.io": "^4.7.5",
         "speakeasy": "^2.0.0",
         "tslint-config-prettier": "^1.18.0",
-        "winston": "^3.2.1"
+        "winston": "^3.13.0"
     },
     "devDependencies": {
-        "@types/chai": "^4.1.3",
-        "@types/cookie-parser": "^1.4.1",
-        "@types/express": "^4.17.8",
+        "@types/chai": "^4.3.16",
+        "@types/cookie-parser": "^1.4.7",
+        "@types/express": "^4.17.21",
         "@types/express-validator": "^3.0.0",
-        "@types/lodash": "^4.14.68",
-        "@types/mocha": "^5.2.0",
-        "@types/mongoose": "^4.7.18",
-        "@types/node": "^13.9.0",
-        "@types/sinon": "^4.3.3",
-        "@types/socket.io": "^2.1.2",
-        "chai": "^4.1.2",
-        "chai-http": "^4.3.0",
-        "concurrently": "^3.5.0",
-        "mocha": "^5.1.1",
-        "node-mocks-http": "^1.7.0",
-        "nodemon": "^2.0.4",
-        "prettier": "^1.18.2",
-        "sinon": "^5.0.7",
-        "ts-node": "^6.0.3",
-        "tslint": "^5.18.0",
-        "typescript": "^4.0.2"
+        "@types/lodash": "^4.17.5",
+        "@types/mocha": "^10.0.6",
+        "@types/mongoose": "^5.11.96",
+        "@types/node": "^20.14.5",
+        "@types/sinon": "^17.0.3",
+        "@types/socket.io": "^3.0.1",
+        "chai": "^5.1.1",
+        "chai-http": "^5.0.0",
+        "concurrently": "^8.2.2",
+        "mocha": "^10.4.0",
+        "node-mocks-http": "^1.14.1",
+        "nodemon": "^3.1.3",
+        "prettier": "^3.3.2",
+        "sinon": "^18.0.0",
+        "ts-node": "^10.9.2",
+        "tslint": "^5.20.1",
+        "typescript": "^5.4.5"
     }
 }
